<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C9D1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/cod"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <Button
        android:id="@+id/btnAlta"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:onClick="alta"
        android:text="@string/alta"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio"
        app:rippleColor="#40FF00" />

    <Button
        android:id="@+id/btnModificacion"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="modifica"
        android:text="@string/modificacion"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsCod"
        app:rippleColor="#8DBAC3" />

    <Button
        android:id="@+id/btnBajaCod"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:onClick="bajaCod"
        android:text="@string/baja_cod"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsDesc"
        app:rippleColor="#FF0000" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:onClick="limpia"
        android:text="@string/limpiar"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio"
        app:rippleColor="#8DBAC3" />

    <Button
        android:id="@+id/btnConsCod"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="consCod"
        android:text="@string/cons_cod"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlta"
        app:rippleColor="#8DBAC3" />

    <Button
        android:id="@+id/btnConsDesc"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:onClick="consDesc"
        android:text="@string/cons_desc"
        app:backgroundTint="#2844FA"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLimpiar"
        app:rippleColor="#8DBAC3" />

</androidx.constraintlayout.widget.ConstraintLayout>